--- a/user-ms/docker-compose.yaml
+++ b/user-ms/docker-compose.yaml
@@ -1,15 +1,26 @@
 version: '3.8'
 services:
-    mongodb:
-      #image: mongodb/mongodb-community-server:4.4.8-ubuntu2004
-      image: mongo:7-jammy
-      #restart: always
-      ports:
-        - '27017:27017'
-      volumes: 
-        - mongodb:/data/db
-      environment:
-        - MONGO_INITDB_ROOT_USERNAME=root
-        - MONGO_INITDB_ROOT_PASSWORD=root
+  mongo:    
+    image: mongo:7-jammy
+    restart: always
+    ports:
+      - '27017:27017'
+    volumes: 
+      - mongodb:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root    
+  mongo-express:
+    image: mongo-express
+    ports:
+      - '8081:8081'
+    environment:                  
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
+      - ME_CONFIG_MONGODB_SERVER=mongo
+      - ME_CONFIG_MONGODB_PORT=27017
+    links:      
+      - mongo  
 volumes:
   mongodb:
