fix: adjust enviroment configs

--- a/user-ms/configs.yaml
+++ b/user-ms/configs.yaml
@@ -1,10 +1,10 @@
 database:
-  mongodb:
-    host: localhost
-    port: 27017
-    database: user
-    user: root
-    password: root
-    ssl: false
-    authSource: admin
+  driver: mongodb
+  host: localhost
+  port: 27017
+  database: user
+  user: root
+  password: root
+  ssl: false
+  authSource: admin
     
